--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,20 +9,17 @@ jobs:
   release:
     runs-on: ubuntu-latest
     permissions:
-      packages: write
-      contents: read
+      contents: write
     env:
       GITHUB_TOKEN: ${{ github.token }}
     steps:
       - uses: actions/checkout@v4
-      - name: Set VERSION variable from tag
-        run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
       - name: Zip Template
-        run: git archive --format=zip --output ./Mtd.Template-$VERSION.zip HEAD:Mtd.Template
+        run: git archive --format=zip --output ./Mtd.Template.zip HEAD:Mtd.Template
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: ./Mtd.Template-$VERSION.zip
+          files: ./Mtd.Template.zip
           fail_on_unmatched_files: true
           generate_release_notes: true
           draft: false
